--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif; 
 }
 .media-info-msg{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width:100vw;
@@ -14,11 +14,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity:1;
     background-color: salmon;
 }
-@media screen and (max-width: 380px){
+@media screen and (max-width: 500px){
     .media-info-msg{
-        opacity:0;
+        display:none;
     }
 }
